# fixsub

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-05-fixsub-mvp.md  2026-07-10-subhd-assrt-fallback-search.md  2026-07-13-subhd-download-api-compatibility.md  2026-07-16-secure-github-publication.md  2026-07-18-github-information-polish.md  2026-07-22-subhd-download-and-low-confidence-output.md
docs/superpowers/specs/: 2026-07-05-fixsub-mvp-design.md  2026-07-13-subhd-download-api-compatibility-design.md  2026-07-16-github-publication-design.md  2026-07-18-github-feature-positioning-design.md  2026-07-22-subhd-download-and-low-confidence-output-design.md
fixsub/: alignment.py  cli.py  credentials.py  decision.py  download.py  encoding.py  errors.py  extract.py  ffprobe.py  logging_utils.py  models.py  movie.py  output.py  paths.py  ranking.py  subtitles.py  sync.py
fixsub/providers/: __init__.py  assrt_api.py  registry.py  subhd.py
tests/: test_assrt_api.py  test_cli_pipeline.py  test_cli_smoke.py  test_credentials.py  test_decision_ranking_output.py  test_download_extract_encoding.py  test_ffprobe.py  test_logging_utils.py  test_movie.py  test_paths_models.py  test_public_repository.py  test_subhd.py  test_subtitles_alignment.py  test_sync.py
tests/fixtures/: assrt_search.json  ffprobe_audio.json
