[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixsub"
version = "0.1.0"
description = "On-demand Chinese subtitle search, validation, and sync CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "charset-normalizer>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
fixsub = "fixsub.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
