[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixsub"
version = "0.1.0"
description = "macOS CLI for Chinese subtitle search, automatic audio sync, and Infuse-ready output"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "subtitles",
  "subtitle-sync",
  "subtitle-synchronization",
  "ffsubsync",
  "chinese-subtitles",
  "macos",
  "ffmpeg",
  "infuse",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "charset-normalizer>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "build>=1.5.0",
]

[project.scripts]
fixsub = "fixsub.cli:app"

[project.urls]
Homepage = "https://github.com/IronJKZ/fixsub"
Repository = "https://github.com/IronJKZ/fixsub"
Issues = "https://github.com/IronJKZ/fixsub/issues"
Changelog = "https://github.com/IronJKZ/fixsub/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
